--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -138,8 +138,17 @@
     <Compile Include="Migrations\202412230938133_InitialModel.designer.cs">
       <DependentUpon>202412230938133_InitialModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202412230954108_AddIsSubscribedProp.cs" />
+    <Compile Include="Migrations\202412230954108_AddIsSubscribedProp.designer.cs">
+      <DependentUpon>202412230954108_AddIsSubscribedProp.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202412231003556_AddMembershipType.cs" />
+    <Compile Include="Migrations\202412231003556_AddMembershipType.designer.cs">
+      <DependentUpon>202412231003556_AddMembershipType.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movies.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\RandomMovieViewModel.cs" />
@@ -206,6 +215,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202412230938133_InitialModel.resx">
       <DependentUpon>202412230938133_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202412230954108_AddIsSubscribedProp.resx">
+      <DependentUpon>202412230954108_AddIsSubscribedProp.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202412231003556_AddMembershipType.resx">
+      <DependentUpon>202412231003556_AddMembershipType.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
