--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -183,6 +183,7 @@
     <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movies.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\CustomerFormViewModel.cs" />
     <Compile Include="ViewModels\RandomMovieViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -227,8 +228,9 @@
     <Content Include="Views\Customers\Details.cshtml" />
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Movies\MovieIndex.cshtml" />
-    <Content Include="Views\Movies\MovieDetails.cshtml" />
-    <Content Include="Views\Customers\New.cshtml" />
+    <Content Include="Views\Movies\EditMovie.cshtml" />
+    <Content Include="Views\Customers\CustomerForm.cshtml" />
+    <Content Include="Views\Movies\NewMovie.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
